// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup tests disablePortal 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-hidden="false"
      class="QxBackdrop css-kd6k92-SxBackdrop-root"
      data-component="QxBackdrop"
      style="opacity: 1; transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="QxPopup QxPopup_x_-8 QxPopup_y_-8 QxPopup_reference_window css-117mzdu-QxPopup-root"
      >
        Popup content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params disableBackdrop false 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="QxBackdrop css-kd6k92-SxBackdrop-root"
    data-component="QxBackdrop"
    style="opacity: 1; transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="QxPopup QxPopup_reference_window css-twhm88-QxPopup-root"
      data-testid="testStyleParams-disableBackdrop-false"
    >
      Статус
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params disableBackdrop true 1`] = `
<DocumentFragment>
  <div
    class="QxPopup QxPopup_disableBackdrop QxPopup_reference_window css-1riikvp-QxPopup-root"
    data-testid="testStyleParams-disableBackdrop-true"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params reference relative 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="QxBackdrop css-kd6k92-SxBackdrop-root"
    data-component="QxBackdrop"
    style="opacity: 1; transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="QxPopup QxPopup_reference_relative css-1dgjuwk-QxPopup-root"
      data-testid="testStyleParams-reference-relative"
    >
      Статус
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params reference window 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="QxBackdrop css-kd6k92-SxBackdrop-root"
    data-component="QxBackdrop"
    style="opacity: 1; transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="QxPopup QxPopup_reference_window css-twhm88-QxPopup-root"
      data-testid="testStyleParams-reference-window"
    >
      Статус
    </div>
  </div>
</DocumentFragment>
`;
